1.        Home page – The hover section for the left/right arrows should widen to the mid-point of the hero space. So instead of only appearing when the user hovers on the very far sides, the left arrow should appear whenever a user hovers over any part of the left side of the hero section (although this should live BEHIND the article headline hover area), and same applies for the right side. 2.        Article Page – make the width of the article headline in the hero section aligns with the hero headline on the home page. It looks as though it’s much wider on the article page (so we’ll need to do reduce that based on the home page) a.       Please change the headline “RELATED CONTENT” to “RELATED GLOBAL CONTENT” and make sure it all stays on 1 line. It looks like there’s some room to the right, so it should be able to fit.

--- a/src/less/article.less
+++ b/src/less/article.less
@@ -42,7 +42,7 @@
 			h2 {
 				z-index:21;
 				position: absolute;
-				width: 70%;
+				width: 55%;
 				bottom: 75px;
 				text-align: left;
 				font: 45px 'BentonSans Light', Arial, Helvetica;
