--- a/src/less/homepage.less
+++ b/src/less/homepage.less
@@ -145,9 +145,9 @@
 						opacity: 0;
 						z-index: 999;
 
-						&:hover{
+						/*&:hover{
 							opacity: 1;
-						}
+						}*/
 
 						&:before{
 							content: none;
